adding remaining docs
